// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumberField /> should hide the phone number edit link when the phone number is null, the current user is authenticated (en) 1`] = `
<div
  className="dte-wismo-base-field-section"
>
  <label
    className="dte-wismo-base-field-label"
  >
    Phone Number
  </label>
  <span
    className="dte-wismo-base-field-children"
  >
    <div
      className="dte-wismo-phone-number-field"
    />
  </span>
</div>
`;

exports[`<PhoneNumberField /> should hide the phone number edit link when the phone number is null, the current user is authenticated (es) 1`] = `
<div
  className="dte-wismo-base-field-section"
>
  <label
    className="dte-wismo-base-field-label"
  >
    Número de teléfono
  </label>
  <span
    className="dte-wismo-base-field-children"
  >
    <div
      className="dte-wismo-phone-number-field"
    />
  </span>
</div>
`;

exports[`<PhoneNumberField /> should render correctly when a valid phone number is passed in and the current user is authenticated (en) 1`] = `
<div
  className="dte-wismo-base-field-section"
>
  <label
    className="dte-wismo-base-field-label"
  >
    Phone Number
  </label>
  <span
    className="dte-wismo-base-field-children"
  >
    <div
      className="dte-wismo-phone-number-field"
    >
      <span
        className="dte-wismo-phone-number-field-value"
      >
        (734) 888-1234
      </span>
      <div
        className="dte-wismo-edit-phone-number-link"
      >
        <button
          className="dte-wismo-button dte-wismo-button-link"
          data-track="mimo"
          data-track-action="click"
          data-track-detail="order tracker"
          onClick={[Function]}
        >
          Edit
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`<PhoneNumberField /> should render correctly when a valid phone number is passed in and the current user is authenticated (es) 1`] = `
<div
  className="dte-wismo-base-field-section"
>
  <label
    className="dte-wismo-base-field-label"
  >
    Número de teléfono
  </label>
  <span
    className="dte-wismo-base-field-children"
  >
    <div
      className="dte-wismo-phone-number-field"
    >
      <span
        className="dte-wismo-phone-number-field-value"
      >
        (734) 888-1234
      </span>
      <div
        className="dte-wismo-edit-phone-number-link"
      >
        <button
          className="dte-wismo-button dte-wismo-button-link"
          data-track="mimo"
          data-track-action="click"
          data-track-detail="order tracker"
          onClick={[Function]}
        >
          Editar
        </button>
      </div>
    </div>
  </span>
</div>
`;

exports[`<PhoneNumberField /> should render correctly when a valid phone number is passed in and the current user is not authenticated (en) 1`] = `
<div
  className="dte-wismo-base-field-section"
>
  <label
    className="dte-wismo-base-field-label"
  >
    Phone Number
  </label>
  <span
    className="dte-wismo-base-field-children"
  >
    <div
      className="dte-wismo-phone-number-field"
    >
      <span
        className="dte-wismo-phone-number-field-value"
      >
        (734) 888-1234
      </span>
    </div>
  </span>
</div>
`;

exports[`<PhoneNumberField /> should render correctly when a valid phone number is passed in and the current user is not authenticated (es) 1`] = `
<div
  className="dte-wismo-base-field-section"
>
  <label
    className="dte-wismo-base-field-label"
  >
    Número de teléfono
  </label>
  <span
    className="dte-wismo-base-field-children"
  >
    <div
      className="dte-wismo-phone-number-field"
    >
      <span
        className="dte-wismo-phone-number-field-value"
      >
        (734) 888-1234
      </span>
    </div>
  </span>
</div>
`;
